# Data-Structure

./: 2_stacks_using_array_dividing_in_2_halves.c  2_stacks_using_array_space_optimization.c  Alice's_Library.c  CMakeLists.txt  GENERIC_LINKED_LIST_USING_C_DOCUMENTATION.txt  Linked_List_operations_on_node.c  Linked_List_primary.c  Polynomial_Operation.c  Queues_Using_Array.c  Reverse_string_using_stack.c  Reverse_using_stack.c  Stack_Using_Array_Using_Struct.c  Stacks_Using_Arrays.c  string_manipulation.c  test.c  test1.c
