add_executable(Stacks_Using_Arrays Stacks_Using_Arrays.c)
add_executable(Stack_Using_Array_Using_Struct Stack_Using_Array_Using_Struct.c)
add_executable(2_stacks_using_array_dividing_in_2_halves 2_stacks_using_array_dividing_in_2_halves.c)
add_executable(2_stacks_using_array_space_optimization.c 2_stacks_using_array_space_optimization.c)
add_executable(Reverse_using_stack Reverse_string_using_stack.c)
add_executable(Queues_Using_Array Queues_Using_Array.c)

add_executable(Linked_List_primary Linked_List_primary.c)
add_executable(Linked_List_operations_on_node Linked_List_operations_on_node.c)



add_executable(Polynomial_Operation Polynomial_Operation.c)

add_executable(Alice's_Library Alice's_Library.c)

add_executable(test test.c)
add_executable(test1 test1.c)